# valkyrie-of-asgard

./: .gitignore  Cargo.toml
projects/docus-book/: docus.toml
projects/docus-book/usage-guide/: book.toml  sidebar.toml
projects/docus-book/usage-guide/continuous-integration/: github.md  index.toml  netlify.md
projects/docus-book/usage-guide/install/: index.md  index.toml  windows.md
projects/docus-cli/: Cargo.toml
projects/docus-cli/src/: lib.rs  main.rs
projects/docus-cli/src/commands/: cmd_build.rs  cmd_serve.rs  mod.rs
projects/docus-cli/src/helpers/: mod.rs
projects/docus-core/: Cargo.toml
projects/docus-core/src/: config.rs  errors.rs  lib.rs  markdown.rs  render.rs  sass.rs  server.rs
projects/docus-core/src/config/: article.rs  book.rs  chapter.rs  global.rs  i18n.rs  mod.rs  render.rs  sidebar.rs  style.rs  topbar.rs
projects/docus-core/src/errors/: for_grass.rs  for_notify.rs  for_std.rs  for_toml.rs  mod.rs
projects/docus-core/src/helpers/: mod.rs
projects/docus-core/src/render/: article.rs  mod.rs
projects/docus-core/templates/: article.html  base.html  page.html  sidebar.html
projects/docus-core/templates/styles/: _variables.scss  main.scss
