[package]
name = "docus"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Tools for voa development"
repository = "https://github.com/oovm/valkyrie-of-asgard"
documentation = "https://docs.rs/voa"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
clap = "4.5.31"
notify = "8.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
axum = { version = "0.8.1", features = ["tokio"] }

[dependencies.docus-core]
path = "../docus-core"
version = "*"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
