[package]
name = "docus-core"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Tools for voa development"
repository = "https://github.com/oovm/valkyrie-of-asgard"
documentation = "https://docs.rs/voa"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
toml = "0.8.8"
pulldown-cmark = "0.9.3"
handlebars = "4.5.0"
tokio = { version = "1.35.0", features = ["full"] }
axum = { version = "0.7.2", features = ["multipart"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
notify = "6.1.1"
walkdir = "2.4.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
