[package]
name = "docus-core"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Tools for voa development"
repository = "https://github.com/oovm/valkyrie-of-asgard"
documentation = "https://docs.rs/voa"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
toml = "0.8.20"
askama = "0.12.1"
notify = { version = "8.0.0", optional = true }
serde = { version = "1.0.218", features = ["derive"] }
walkdir = "2.5.0"
tracing = "0.1.41"
comrak = "0.36.0"
indexmap = { version = "2.7.1", features = ["serde"] }
grass = "0.13.4"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
